COMPILADOR_LUA/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSEIF

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> command
Rule 3     block -> command command_ret
Rule 4     command -> SEMICOLON
Rule 5     command -> list_vars ATRIB list_exps
Rule 6     command -> call_function
Rule 7     command -> rotulo
Rule 8     command -> BREAK
Rule 9     command -> DO block END
Rule 10    command -> struct_while
Rule 11    command -> struct_repeat
Rule 12    command -> if
Rule 13    command -> struct_for
Rule 14    command -> struct_for_in
Rule 15    command -> def_function
Rule 16    command -> local_var
Rule 17    list_command -> command list_command
Rule 18    list_command -> command
Rule 19    command_ret -> RETURN
Rule 20    command_ret -> RETURN list_exps
Rule 21    command_ret -> RETURN list_exps SEMICOLON
Rule 22    rotulo -> DUALCOLON NAME DUALCOLON
Rule 23    name_function -> NAME
Rule 24    name_function -> NAME DOT NAME
Rule 25    name_function -> NAME COLON NAME
Rule 26    list_vars -> var
Rule 27    list_vars -> var COMMA list_vars
Rule 28    var -> NAME
Rule 29    var -> prefix_exp LCOLCH exp RCOLCH
Rule 30    var -> prefix_exp DOT NAME
Rule 31    prefix_exp -> var
Rule 32    prefix_exp -> call_function
Rule 33    prefix_exp -> LPAREN exp RPAREN
Rule 34    list_names -> NAME COMMA list_names
Rule 35    list_names -> NAME
Rule 36    list_exps -> exp COMMA list_exps
Rule 37    list_exps -> exp
Rule 38    exp -> NIL
Rule 39    exp -> FALSE
Rule 40    exp -> TRUE
Rule 41    exp -> NUMBER
Rule 42    exp -> STRING
Rule 43    exp -> VARARGS
Rule 44    exp -> def_function
Rule 45    exp -> exp_prefix
Rule 46    exp -> construct_table
Rule 47    exp -> exp op_unary exp
Rule 48    exp -> exp PLUS exp
Rule 49    exp -> exp MINUS exp
Rule 50    exp -> exp TIMES exp
Rule 51    exp -> exp DIVIDE exp
Rule 52    exp -> exp EXPO exp
Rule 53    exp -> exp PERCENTUAL exp
Rule 54    exp -> exp CONCAT exp
Rule 55    exp -> exp LT exp
Rule 56    exp -> exp LTEQUALS exp
Rule 57    exp -> exp GT exp
Rule 58    exp -> exp GTEQUALS exp
Rule 59    exp -> exp EQUALS exp
Rule 60    exp -> exp DIF exp
Rule 61    exp -> exp AND exp
Rule 62    exp -> exp OR exp
Rule 63    exp_prefix -> VAR
Rule 64    exp_prefix -> call_function
Rule 65    exp_prefix -> LPAREN exp RPAREN
Rule 66    call_function -> exp_prefix args
Rule 67    call_function -> exp_prefix COLON NAME args
Rule 68    args -> LPAREN list_exps RPAREN
Rule 69    args -> construct_table
Rule 70    def_function -> function
Rule 71    def_function -> local_function
Rule 72    body_function -> LPAREN list_pars RPAREN block END
Rule 73    list_pars -> list_names COMMA VARARGS
Rule 74    list_pars -> VARARGS
Rule 75    construct_table -> LBRACE list_fields RBRACE
Rule 76    construct_table -> LBRACE RBRACE
Rule 77    list_fields -> field
Rule 78    list_fields -> field separator_fields list_fields
Rule 79    list_fields -> field_empty
Rule 80    list_fields -> field_empty separator_fields list_fields
Rule 81    field_empty -> LCOLCH exp RCOLCH
Rule 82    field_empty -> NAME
Rule 83    field -> LCOLCH exp RCOLCH ATRIB exp
Rule 84    field -> NAME ATRIB exp
Rule 85    separator_fields -> COMMA
Rule 86    separator_fields -> SEMICOLON
Rule 87    local_var -> LOCAL list_names ATRIB list_exps
Rule 88    local_var -> LOCAL NAME ATRIB exp
Rule 89    op_unary -> MINUS
Rule 90    op_unary -> NOT
Rule 91    op_unary -> TAG
Rule 92    function -> FUNCTION body_function
Rule 93    if -> IF exp THEN block END
Rule 94    if -> IF exp THEN else
Rule 95    else -> ELSE block END
Rule 96    struct_while -> WHILE exp DO block END
Rule 97    struct_for -> FOR NAME ATRIB exp COMMA exp DO block END
Rule 98    struct_for -> FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
Rule 99    struct_for_in -> FOR list_names IN list_exps DO block END
Rule 100   struct_repeat -> REPEAT block UNTIL exp
Rule 101   local_function -> LOCAL FUNCTION name_function body_function

Terminals, with rules where they appear

AND                  : 61
ATRIB                : 5 83 84 87 88 97 98
BREAK                : 8
COLON                : 25 67
COMMA                : 27 34 36 73 85 97 98 98
CONCAT               : 54
DIF                  : 60
DIVIDE               : 51
DO                   : 9 96 97 98 99
DOT                  : 24 30
DUALCOLON            : 22 22
ELSE                 : 95
ELSEIF               : 
END                  : 9 72 93 95 96 97 98 99
EQUALS               : 59
EXPO                 : 52
FALSE                : 39
FOR                  : 97 98 99
FUNCTION             : 92 101
GT                   : 57
GTEQUALS             : 58
IF                   : 93 94
IN                   : 99
LBRACE               : 75 76
LCOLCH               : 29 81 83
LOCAL                : 87 88 101
LPAREN               : 33 65 68 72
LT                   : 55
LTEQUALS             : 56
MINUS                : 49 89
NAME                 : 22 23 24 24 25 25 28 30 34 35 67 82 84 88 97 98
NIL                  : 38
NOT                  : 90
NUMBER               : 41
OR                   : 62
PERCENTUAL           : 53
PLUS                 : 48
RBRACE               : 75 76
RCOLCH               : 29 81 83
REPEAT               : 100
RETURN               : 19 20 21
RPAREN               : 33 65 68 72
SEMICOLON            : 4 21 86
STRING               : 42
TAG                  : 91
THEN                 : 93 94
TIMES                : 50
TRUE                 : 40
UNTIL                : 100
VAR                  : 63
VARARGS              : 43 73 74
WHILE                : 96
error                : 

Nonterminals, with rules where they appear

args                 : 66 67
block                : 1 9 72 93 95 96 97 98 99 100
body_function        : 92 101
call_function        : 6 32 64
command              : 2 3 17 18
command_ret          : 3
construct_table      : 46 69
def_function         : 15 44
else                 : 94
exp                  : 29 33 36 37 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 65 81 83 83 84 88 93 94 96 97 97 98 98 98 100
exp_prefix           : 45 66 67
field                : 77 78
field_empty          : 79 80
function             : 70
if                   : 12
list_command         : 17
list_exps            : 5 20 21 36 68 87 99
list_fields          : 75 78 80
list_names           : 34 73 87 99
list_pars            : 72
list_vars            : 5 27
local_function       : 71
local_var            : 16
name_function        : 101
op_unary             : 47
prefix_exp           : 29 30
program              : 0
rotulo               : 7
separator_fields     : 78 80
struct_for           : 13
struct_for_in        : 14
struct_repeat        : 11
struct_while         : 10
var                  : 26 27 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . command
    (3) block -> . command command_ret
    (4) command -> . SEMICOLON
    (5) command -> . list_vars ATRIB list_exps
    (6) command -> . call_function
    (7) command -> . rotulo
    (8) command -> . BREAK
    (9) command -> . DO block END
    (10) command -> . struct_while
    (11) command -> . struct_repeat
    (12) command -> . if
    (13) command -> . struct_for
    (14) command -> . struct_for_in
    (15) command -> . def_function
    (16) command -> . local_var
    (26) list_vars -> . var
    (27) list_vars -> . var COMMA list_vars
    (66) call_function -> . exp_prefix args
    (67) call_function -> . exp_prefix COLON NAME args
    (22) rotulo -> . DUALCOLON NAME DUALCOLON
    (96) struct_while -> . WHILE exp DO block END
    (100) struct_repeat -> . REPEAT block UNTIL exp
    (93) if -> . IF exp THEN block END
    (94) if -> . IF exp THEN else
    (97) struct_for -> . FOR NAME ATRIB exp COMMA exp DO block END
    (98) struct_for -> . FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
    (99) struct_for_in -> . FOR list_names IN list_exps DO block END
    (70) def_function -> . function
    (71) def_function -> . local_function
    (87) local_var -> . LOCAL list_names ATRIB list_exps
    (88) local_var -> . LOCAL NAME ATRIB exp
    (28) var -> . NAME
    (29) var -> . prefix_exp LCOLCH exp RCOLCH
    (30) var -> . prefix_exp DOT NAME
    (63) exp_prefix -> . VAR
    (64) exp_prefix -> . call_function
    (65) exp_prefix -> . LPAREN exp RPAREN
    (92) function -> . FUNCTION body_function
    (101) local_function -> . LOCAL FUNCTION name_function body_function
    (31) prefix_exp -> . var
    (32) prefix_exp -> . call_function
    (33) prefix_exp -> . LPAREN exp RPAREN

    SEMICOLON       shift and go to state 4
    BREAK           shift and go to state 8
    DO              shift and go to state 9
    DUALCOLON       shift and go to state 20
    WHILE           shift and go to state 21
    REPEAT          shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    LOCAL           shift and go to state 27
    NAME            shift and go to state 19
    VAR             shift and go to state 29
    LPAREN          shift and go to state 30
    FUNCTION        shift and go to state 31

    program                        shift and go to state 1
    block                          shift and go to state 2
    command                        shift and go to state 3
    list_vars                      shift and go to state 5
    call_function                  shift and go to state 6
    rotulo                         shift and go to state 7
    struct_while                   shift and go to state 10
    struct_repeat                  shift and go to state 11
    if                             shift and go to state 12
    struct_for                     shift and go to state 13
    struct_for_in                  shift and go to state 14
    def_function                   shift and go to state 15
    local_var                      shift and go to state 16
    var                            shift and go to state 17
    exp_prefix                     shift and go to state 18
    function                       shift and go to state 25
    local_function                 shift and go to state 26
    prefix_exp                     shift and go to state 28

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> command .
    (3) block -> command . command_ret
    (19) command_ret -> . RETURN
    (20) command_ret -> . RETURN list_exps
    (21) command_ret -> . RETURN list_exps SEMICOLON

    $end            reduce using rule 2 (block -> command .)
    END             reduce using rule 2 (block -> command .)
    UNTIL           reduce using rule 2 (block -> command .)
    RETURN          shift and go to state 33

    command_ret                    shift and go to state 32

state 4

    (4) command -> SEMICOLON .

    RETURN          reduce using rule 4 (command -> SEMICOLON .)
    $end            reduce using rule 4 (command -> SEMICOLON .)
    END             reduce using rule 4 (command -> SEMICOLON .)
    UNTIL           reduce using rule 4 (command -> SEMICOLON .)


state 5

    (5) command -> list_vars . ATRIB list_exps

    ATRIB           shift and go to state 34


state 6

    (6) command -> call_function .
    (64) exp_prefix -> call_function .
    (32) prefix_exp -> call_function .

    RETURN          reduce using rule 6 (command -> call_function .)
    $end            reduce using rule 6 (command -> call_function .)
    END             reduce using rule 6 (command -> call_function .)
    UNTIL           reduce using rule 6 (command -> call_function .)
    COLON           reduce using rule 64 (exp_prefix -> call_function .)
    LPAREN          reduce using rule 64 (exp_prefix -> call_function .)
    LBRACE          reduce using rule 64 (exp_prefix -> call_function .)
    LCOLCH          reduce using rule 32 (prefix_exp -> call_function .)
    DOT             reduce using rule 32 (prefix_exp -> call_function .)


state 7

    (7) command -> rotulo .

    RETURN          reduce using rule 7 (command -> rotulo .)
    $end            reduce using rule 7 (command -> rotulo .)
    END             reduce using rule 7 (command -> rotulo .)
    UNTIL           reduce using rule 7 (command -> rotulo .)


state 8

    (8) command -> BREAK .

    RETURN          reduce using rule 8 (command -> BREAK .)
    $end            reduce using rule 8 (command -> BREAK .)
    END             reduce using rule 8 (command -> BREAK .)
    UNTIL           reduce using rule 8 (command -> BREAK .)


state 9

    (9) command -> DO . block END
    (2) block -> . command
    (3) block -> . command command_ret
    (4) command -> . SEMICOLON
    (5) command -> . list_vars ATRIB list_exps
    (6) command -> . call_function
    (7) command -> . rotulo
    (8) command -> . BREAK
    (9) command -> . DO block END
    (10) command -> . struct_while
    (11) command -> . struct_repeat
    (12) command -> . if
    (13) command -> . struct_for
    (14) command -> . struct_for_in
    (15) command -> . def_function
    (16) command -> . local_var
    (26) list_vars -> . var
    (27) list_vars -> . var COMMA list_vars
    (66) call_function -> . exp_prefix args
    (67) call_function -> . exp_prefix COLON NAME args
    (22) rotulo -> . DUALCOLON NAME DUALCOLON
    (96) struct_while -> . WHILE exp DO block END
    (100) struct_repeat -> . REPEAT block UNTIL exp
    (93) if -> . IF exp THEN block END
    (94) if -> . IF exp THEN else
    (97) struct_for -> . FOR NAME ATRIB exp COMMA exp DO block END
    (98) struct_for -> . FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
    (99) struct_for_in -> . FOR list_names IN list_exps DO block END
    (70) def_function -> . function
    (71) def_function -> . local_function
    (87) local_var -> . LOCAL list_names ATRIB list_exps
    (88) local_var -> . LOCAL NAME ATRIB exp
    (28) var -> . NAME
    (29) var -> . prefix_exp LCOLCH exp RCOLCH
    (30) var -> . prefix_exp DOT NAME
    (63) exp_prefix -> . VAR
    (64) exp_prefix -> . call_function
    (65) exp_prefix -> . LPAREN exp RPAREN
    (92) function -> . FUNCTION body_function
    (101) local_function -> . LOCAL FUNCTION name_function body_function
    (31) prefix_exp -> . var
    (32) prefix_exp -> . call_function
    (33) prefix_exp -> . LPAREN exp RPAREN

    SEMICOLON       shift and go to state 4
    BREAK           shift and go to state 8
    DO              shift and go to state 9
    DUALCOLON       shift and go to state 20
    WHILE           shift and go to state 21
    REPEAT          shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    LOCAL           shift and go to state 27
    NAME            shift and go to state 19
    VAR             shift and go to state 29
    LPAREN          shift and go to state 30
    FUNCTION        shift and go to state 31

    block                          shift and go to state 35
    command                        shift and go to state 3
    list_vars                      shift and go to state 5
    call_function                  shift and go to state 6
    rotulo                         shift and go to state 7
    struct_while                   shift and go to state 10
    struct_repeat                  shift and go to state 11
    if                             shift and go to state 12
    struct_for                     shift and go to state 13
    struct_for_in                  shift and go to state 14
    def_function                   shift and go to state 15
    local_var                      shift and go to state 16
    var                            shift and go to state 17
    exp_prefix                     shift and go to state 18
    function                       shift and go to state 25
    local_function                 shift and go to state 26
    prefix_exp                     shift and go to state 28

state 10

    (10) command -> struct_while .

    RETURN          reduce using rule 10 (command -> struct_while .)
    $end            reduce using rule 10 (command -> struct_while .)
    END             reduce using rule 10 (command -> struct_while .)
    UNTIL           reduce using rule 10 (command -> struct_while .)


state 11

    (11) command -> struct_repeat .

    RETURN          reduce using rule 11 (command -> struct_repeat .)
    $end            reduce using rule 11 (command -> struct_repeat .)
    END             reduce using rule 11 (command -> struct_repeat .)
    UNTIL           reduce using rule 11 (command -> struct_repeat .)


state 12

    (12) command -> if .

    RETURN          reduce using rule 12 (command -> if .)
    $end            reduce using rule 12 (command -> if .)
    END             reduce using rule 12 (command -> if .)
    UNTIL           reduce using rule 12 (command -> if .)


state 13

    (13) command -> struct_for .

    RETURN          reduce using rule 13 (command -> struct_for .)
    $end            reduce using rule 13 (command -> struct_for .)
    END             reduce using rule 13 (command -> struct_for .)
    UNTIL           reduce using rule 13 (command -> struct_for .)


state 14

    (14) command -> struct_for_in .

    RETURN          reduce using rule 14 (command -> struct_for_in .)
    $end            reduce using rule 14 (command -> struct_for_in .)
    END             reduce using rule 14 (command -> struct_for_in .)
    UNTIL           reduce using rule 14 (command -> struct_for_in .)


state 15

    (15) command -> def_function .

    RETURN          reduce using rule 15 (command -> def_function .)
    $end            reduce using rule 15 (command -> def_function .)
    END             reduce using rule 15 (command -> def_function .)
    UNTIL           reduce using rule 15 (command -> def_function .)


state 16

    (16) command -> local_var .

    RETURN          reduce using rule 16 (command -> local_var .)
    $end            reduce using rule 16 (command -> local_var .)
    END             reduce using rule 16 (command -> local_var .)
    UNTIL           reduce using rule 16 (command -> local_var .)


state 17

    (26) list_vars -> var .
    (27) list_vars -> var . COMMA list_vars
    (31) prefix_exp -> var .

    ATRIB           reduce using rule 26 (list_vars -> var .)
    COMMA           shift and go to state 36
    LCOLCH          reduce using rule 31 (prefix_exp -> var .)
    DOT             reduce using rule 31 (prefix_exp -> var .)


state 18

    (66) call_function -> exp_prefix . args
    (67) call_function -> exp_prefix . COLON NAME args
    (68) args -> . LPAREN list_exps RPAREN
    (69) args -> . construct_table
    (75) construct_table -> . LBRACE list_fields RBRACE
    (76) construct_table -> . LBRACE RBRACE

    COLON           shift and go to state 38
    LPAREN          shift and go to state 39
    LBRACE          shift and go to state 41

    args                           shift and go to state 37
    construct_table                shift and go to state 40

state 19

    (28) var -> NAME .

    COMMA           reduce using rule 28 (var -> NAME .)
    ATRIB           reduce using rule 28 (var -> NAME .)
    LCOLCH          reduce using rule 28 (var -> NAME .)
    DOT             reduce using rule 28 (var -> NAME .)


state 20

    (22) rotulo -> DUALCOLON . NAME DUALCOLON

    NAME            shift and go to state 42


state 21

    (96) struct_while -> WHILE . exp DO block END
    (38) exp -> . NIL
    (39) exp -> . FALSE
    (40) exp -> . TRUE
    (41) exp -> . NUMBER
    (42) exp -> . STRING
    (43) exp -> . VARARGS
    (44) exp -> . def_function
    (45) exp -> . exp_prefix
    (46) exp -> . construct_table
    (47) exp -> . exp op_unary exp
    (48) exp -> . exp PLUS exp
    (49) exp -> . exp MINUS exp
    (50) exp -> . exp TIMES exp
    (51) exp -> . exp DIVIDE exp
    (52) exp -> . exp EXPO exp
    (53) exp -> . exp PERCENTUAL exp
    (54) exp -> . exp CONCAT exp
    (55) exp -> . exp LT exp
    (56) exp -> . exp LTEQUALS exp
    (57) exp -> . exp GT exp
    (58) exp -> . exp GTEQUALS exp
    (59) exp -> . exp EQUALS exp
    (60) exp -> . exp DIF exp
    (61) exp -> . exp AND exp
    (62) exp -> . exp OR exp
    (70) def_function -> . function
    (71) def_function -> . local_function
    (63) exp_prefix -> . VAR
    (64) exp_prefix -> . call_function
    (65) exp_prefix -> . LPAREN exp RPAREN
    (75) construct_table -> . LBRACE list_fields RBRACE
    (76) construct_table -> . LBRACE RBRACE
    (92) function -> . FUNCTION body_function
    (101) local_function -> . LOCAL FUNCTION name_function body_function
    (66) call_function -> . exp_prefix args
    (67) call_function -> . exp_prefix COLON NAME args

    NIL             shift and go to state 44
    FALSE           shift and go to state 45
    TRUE            shift and go to state 46
    NUMBER          shift and go to state 47
    STRING          shift and go to state 48
    VARARGS         shift and go to state 49
    VAR             shift and go to state 29
    LPAREN          shift and go to state 54
    LBRACE          shift and go to state 41
    FUNCTION        shift and go to state 31
    LOCAL           shift and go to state 55

    exp                            shift and go to state 43
    def_function                   shift and go to state 50
    exp_prefix                     shift and go to state 51
    construct_table                shift and go to state 52
    function                       shift and go to state 25
    local_function                 shift and go to state 26
    call_function                  shift and go to state 53

state 22

    (100) struct_repeat -> REPEAT . block UNTIL exp
    (2) block -> . command
    (3) block -> . command command_ret
    (4) command -> . SEMICOLON
    (5) command -> . list_vars ATRIB list_exps
    (6) command -> . call_function
    (7) command -> . rotulo
    (8) command -> . BREAK
    (9) command -> . DO block END
    (10) command -> . struct_while
    (11) command -> . struct_repeat
    (12) command -> . if
    (13) command -> . struct_for
    (14) command -> . struct_for_in
    (15) command -> . def_function
    (16) command -> . local_var
    (26) list_vars -> . var
    (27) list_vars -> . var COMMA list_vars
    (66) call_function -> . exp_prefix args
    (67) call_function -> . exp_prefix COLON NAME args
    (22) rotulo -> . DUALCOLON NAME DUALCOLON
    (96) struct_while -> . WHILE exp DO block END
    (100) struct_repeat -> . REPEAT block UNTIL exp
    (93) if -> . IF exp THEN block END
    (94) if -> . IF exp THEN else
    (97) struct_for -> . FOR NAME ATRIB exp COMMA exp DO block END
    (98) struct_for -> . FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
    (99) struct_for_in -> . FOR list_names IN list_exps DO block END
    (70) def_function -> . function
    (71) def_function -> . local_function
    (87) local_var -> . LOCAL list_names ATRIB list_exps
    (88) local_var -> . LOCAL NAME ATRIB exp
    (28) var -> . NAME
    (29) var -> . prefix_exp LCOLCH exp RCOLCH
    (30) var -> . prefix_exp DOT NAME
    (63) exp_prefix -> . VAR
    (64) exp_prefix -> . call_function
    (65) exp_prefix -> . LPAREN exp RPAREN
    (92) function -> . FUNCTION body_function
    (101) local_function -> . LOCAL FUNCTION name_function body_function
    (31) prefix_exp -> . var
    (32) prefix_exp -> . call_function
    (33) prefix_exp -> . LPAREN exp RPAREN

    SEMICOLON       shift and go to state 4
    BREAK           shift and go to state 8
    DO              shift and go to state 9
    DUALCOLON       shift and go to state 20
    WHILE           shift and go to state 21
    REPEAT          shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    LOCAL           shift and go to state 27
    NAME            shift and go to state 19
    VAR             shift and go to state 29
    LPAREN          shift and go to state 30
    FUNCTION        shift and go to state 31

    block                          shift and go to state 56
    command                        shift and go to state 3
    list_vars                      shift and go to state 5
    call_function                  shift and go to state 6
    rotulo                         shift and go to state 7
    struct_while                   shift and go to state 10
    struct_repeat                  shift and go to state 11
    if                             shift and go to state 12
    struct_for                     shift and go to state 13
    struct_for_in                  shift and go to state 14
    def_function                   shift and go to state 15
    local_var                      shift and go to state 16
    var                            shift and go to state 17
    exp_prefix                     shift and go to state 18
    function                       shift and go to state 25
    local_function                 shift and go to state 26
    prefix_exp                     shift and go to state 28

state 23

    (93) if -> IF . exp THEN block END
    (94) if -> IF . exp THEN else
    (38) exp -> . NIL
    (39) exp -> . FALSE
    (40) exp -> . TRUE
    (41) exp -> . NUMBER
    (42) exp -> . STRING
    (43) exp -> . VARARGS
    (44) exp -> . def_function
    (45) exp -> . exp_prefix
    (46) exp -> . construct_table
    (47) exp -> . exp op_unary exp
    (48) exp -> . exp PLUS exp
    (49) exp -> . exp MINUS exp
    (50) exp -> . exp TIMES exp
    (51) exp -> . exp DIVIDE exp
    (52) exp -> . exp EXPO exp
    (53) exp -> . exp PERCENTUAL exp
    (54) exp -> . exp CONCAT exp
    (55) exp -> . exp LT exp
    (56) exp -> . exp LTEQUALS exp
    (57) exp -> . exp GT exp
    (58) exp -> . exp GTEQUALS exp
    (59) exp -> . exp EQUALS exp
    (60) exp -> . exp DIF exp
    (61) exp -> . exp AND exp
    (62) exp -> . exp OR exp
    (70) def_function -> . function
    (71) def_function -> . local_function
    (63) exp_prefix -> . VAR
    (64) exp_prefix -> . call_function
    (65) exp_prefix -> . LPAREN exp RPAREN
    (75) construct_table -> . LBRACE list_fields RBRACE
    (76) construct_table -> . LBRACE RBRACE
    (92) function -> . FUNCTION body_function
    (101) local_function -> . LOCAL FUNCTION name_function body_function
    (66) call_function -> . exp_prefix args
    (67) call_function -> . exp_prefix COLON NAME args

    NIL             shift and go to state 44
    FALSE           shift and go to state 45
    TRUE            shift and go to state 46
    NUMBER          shift and go to state 47
    STRING          shift and go to state 48
    VARARGS         shift and go to state 49
    VAR             shift and go to state 29
    LPAREN          shift and go to state 54
    LBRACE          shift and go to state 41
    FUNCTION        shift and go to state 31
    LOCAL           shift and go to state 55

    exp                            shift and go to state 57
    def_function                   shift and go to state 50
    exp_prefix                     shift and go to state 51
    construct_table                shift and go to state 52
    function                       shift and go to state 25
    local_function                 shift and go to state 26
    call_function                  shift and go to state 53

state 24

    (97) struct_for -> FOR . NAME ATRIB exp COMMA exp DO block END
    (98) struct_for -> FOR . NAME ATRIB exp COMMA exp COMMA exp DO block END
    (99) struct_for_in -> FOR . list_names IN list_exps DO block END
    (34) list_names -> . NAME COMMA list_names
    (35) list_names -> . NAME

    NAME            shift and go to state 58

    list_names                     shift and go to state 59

state 25

    (70) def_function -> function .

    RETURN          reduce using rule 70 (def_function -> function .)
    $end            reduce using rule 70 (def_function -> function .)
    END             reduce using rule 70 (def_function -> function .)
    DO              reduce using rule 70 (def_function -> function .)
    PLUS            reduce using rule 70 (def_function -> function .)
    MINUS           reduce using rule 70 (def_function -> function .)
    TIMES           reduce using rule 70 (def_function -> function .)
    DIVIDE          reduce using rule 70 (def_function -> function .)
    EXPO            reduce using rule 70 (def_function -> function .)
    PERCENTUAL      reduce using rule 70 (def_function -> function .)
    CONCAT          reduce using rule 70 (def_function -> function .)
    LT              reduce using rule 70 (def_function -> function .)
    LTEQUALS        reduce using rule 70 (def_function -> function .)
    GT              reduce using rule 70 (def_function -> function .)
    GTEQUALS        reduce using rule 70 (def_function -> function .)
    EQUALS          reduce using rule 70 (def_function -> function .)
    DIF             reduce using rule 70 (def_function -> function .)
    AND             reduce using rule 70 (def_function -> function .)
    OR              reduce using rule 70 (def_function -> function .)
    NOT             reduce using rule 70 (def_function -> function .)
    TAG             reduce using rule 70 (def_function -> function .)
    UNTIL           reduce using rule 70 (def_function -> function .)
    THEN            reduce using rule 70 (def_function -> function .)
    RPAREN          reduce using rule 70 (def_function -> function .)
    COMMA           reduce using rule 70 (def_function -> function .)
    SEMICOLON       reduce using rule 70 (def_function -> function .)
    RCOLCH          reduce using rule 70 (def_function -> function .)
    RBRACE          reduce using rule 70 (def_function -> function .)


state 26

    (71) def_function -> local_function .

    RETURN          reduce using rule 71 (def_function -> local_function .)
    $end            reduce using rule 71 (def_function -> local_function .)
    END             reduce using rule 71 (def_function -> local_function .)
    DO              reduce using rule 71 (def_function -> local_function .)
    PLUS            reduce using rule 71 (def_function -> local_function .)
    MINUS           reduce using rule 71 (def_function -> local_function .)
    TIMES           reduce using rule 71 (def_function -> local_function .)
    DIVIDE          reduce using rule 71 (def_function -> local_function .)
    EXPO            reduce using rule 71 (def_function -> local_function .)
    PERCENTUAL      reduce using rule 71 (def_function -> local_function .)
    CONCAT          reduce using rule 71 (def_function -> local_function .)
    LT              reduce using rule 71 (def_function -> local_function .)
    LTEQUALS        reduce using rule 71 (def_function -> local_function .)
    GT              reduce using rule 71 (def_function -> local_function .)
    GTEQUALS        reduce using rule 71 (def_function -> local_function .)
    EQUALS          reduce using rule 71 (def_function -> local_function .)
    DIF             reduce using rule 71 (def_function -> local_function .)
    AND             reduce using rule 71 (def_function -> local_function .)
    OR              reduce using rule 71 (def_function -> local_function .)
    NOT             reduce using rule 71 (def_function -> local_function .)
    TAG             reduce using rule 71 (def_function -> local_function .)
    UNTIL           reduce using rule 71 (def_function -> local_function .)
    THEN            reduce using rule 71 (def_function -> local_function .)
    RPAREN          reduce using rule 71 (def_function -> local_function .)
    COMMA           reduce using rule 71 (def_function -> local_function .)
    SEMICOLON       reduce using rule 71 (def_function -> local_function .)
    RCOLCH          reduce using rule 71 (def_function -> local_function .)
    RBRACE          reduce using rule 71 (def_function -> local_function .)


state 27

    (87) local_var -> LOCAL . list_names ATRIB list_exps
    (88) local_var -> LOCAL . NAME ATRIB exp
    (101) local_function -> LOCAL . FUNCTION name_function body_function
    (34) list_names -> . NAME COMMA list_names
    (35) list_names -> . NAME

    NAME            shift and go to state 61
    FUNCTION        shift and go to state 62

    list_names                     shift and go to state 60

state 28

    (29) var -> prefix_exp . LCOLCH exp RCOLCH
    (30) var -> prefix_exp . DOT NAME

    LCOLCH          shift and go to state 63
    DOT             shift and go to state 64


state 29

    (63) exp_prefix -> VAR .

    COLON           reduce using rule 63 (exp_prefix -> VAR .)
    LPAREN          reduce using rule 63 (exp_prefix -> VAR .)
    LBRACE          reduce using rule 63 (exp_prefix -> VAR .)
    DO              reduce using rule 63 (exp_prefix -> VAR .)
    PLUS            reduce using rule 63 (exp_prefix -> VAR .)
    MINUS           reduce using rule 63 (exp_prefix -> VAR .)
    TIMES           reduce using rule 63 (exp_prefix -> VAR .)
    DIVIDE          reduce using rule 63 (exp_prefix -> VAR .)
    EXPO            reduce using rule 63 (exp_prefix -> VAR .)
    PERCENTUAL      reduce using rule 63 (exp_prefix -> VAR .)
    CONCAT          reduce using rule 63 (exp_prefix -> VAR .)
    LT              reduce using rule 63 (exp_prefix -> VAR .)
    LTEQUALS        reduce using rule 63 (exp_prefix -> VAR .)
    GT              reduce using rule 63 (exp_prefix -> VAR .)
    GTEQUALS        reduce using rule 63 (exp_prefix -> VAR .)
    EQUALS          reduce using rule 63 (exp_prefix -> VAR .)
    DIF             reduce using rule 63 (exp_prefix -> VAR .)
    AND             reduce using rule 63 (exp_prefix -> VAR .)
    OR              reduce using rule 63 (exp_prefix -> VAR .)
    NOT             reduce using rule 63 (exp_prefix -> VAR .)
    TAG             reduce using rule 63 (exp_prefix -> VAR .)
    THEN            reduce using rule 63 (exp_prefix -> VAR .)
    RPAREN          reduce using rule 63 (exp_prefix -> VAR .)
    COMMA           reduce using rule 63 (exp_prefix -> VAR .)
    SEMICOLON       reduce using rule 63 (exp_prefix -> VAR .)
    $end            reduce using rule 63 (exp_prefix -> VAR .)
    END             reduce using rule 63 (exp_prefix -> VAR .)
    UNTIL           reduce using rule 63 (exp_prefix -> VAR .)
    RETURN          reduce using rule 63 (exp_prefix -> VAR .)
    RCOLCH          reduce using rule 63 (exp_prefix -> VAR .)
    RBRACE          reduce using rule 63 (exp_prefix -> VAR .)


state 30
